Centering menu + names.

--- a/cafemenuPERSONAL.css
+++ b/cafemenuPERSONAL.css
@@ -1,46 +1,45 @@
-/* font-family: 'Abyssinica SIL', serif;
-font-family: 'Alice', serif;
-font-family: 'Berkshire Swash', cursive;
-font-family: 'EB Garamond', serif;
-font-family: 'Fredericka the Great', cursive;
-font-family: 'Great Vibes', cursive;
-font-family: 'IBM Plex Serif', serif;
-font-family: 'Lemonada', cursive;
-font-family: 'Macondo', cursive;
-font-family: 'Old Standard TT', serif;
-font-family: 'Pinyon Script', cursive;
-font-family: 'Satisfy', cursive;
-font-family: 'Tangerine', cursive;
-font-family: 'Titillium Web', sans-serif; */
-
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
     font-family: 'IBM Plex Serif', serif;
-    overflow: hidden;
+    height: 100%;
+    margin: 0;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+.menu {
+    width: 80%;
+    max-width: 500px;
+    background-color: burlywood;
+    border: 5px solid rgb(150, 127, 96);
+    margin: 0% auto;
+    padding: 0px 20px;
+    padding: 2vw 2vw;
+}
+
 }
 
 h1 {
     font-family: 'Alice', serif;
-}
-
-h2 {
-    font-family: 'Abyssinica SIL', serif;
-}
-
-h1,
-h2, 
-p {
-    text-align: center;
-}
-
-h1 {
     font-size: 40px;
     margin-top: 0;
     margin-bottom: 15px;
 }
 
 h2 {
+    font-family: 'Abyssinica SIL', serif;
     font-size: 30px;
+}
+
+h1,
+h2, 
+p {
+    text-align: center;
 }
 
 hr {
@@ -52,16 +51,6 @@ hr {
 
 .established {
     font-style: italic;
-}
-
-.menu {
-    width: 80%;
-    max-width: 500px;
-    background-color: burlywood;
-    border: 5px solid rgb(150, 127, 96);
-    margin: 0% auto;
-    padding: 0px 20px;
-    padding: 2vw 2vw;
 }
 
 .price {
